# everest

./: .gitattributes  .gitignore  README.md
everest-app/: .gitignore  package-lock.json  package.json
everest-app/assets/: icon_full.icns
everest-app/src/: main.js  preload.js
everest-app/src/static/: index.css  index.html
everest-app/src/static/scripts/: index.js
everest-server/: .gitignore  EverestService_mac.spec  EverestService_win.spec  README.md  pyproject.toml
everest-server/src/everest_server/: __main__.py  app.py  config_loader.py  model_manager.py
everest-server/src/everest_server/routes/: config.py  health.py  models.py  prompt.py  shutdown.py  typer.py
everest-server/src/everest_server/utils/: typer.py
